# vivatech-scraper

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  justfile  rustfmt.toml  vivatech_partners_2025.csv  vivatech_speakers_2025_extended.csv
.github/workflows/: ci.yml
helix/: config.toml
src/: main.rs  partners.rs
