[package]
name = "vivatech"
version = "0.1.0"
edition = "2021"
authors = ["Hamze ghalebi@gmail.com"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0.98", features = ["default"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
env_logger = "0.11"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
rig-core = { version = "0.12.0" }
schemars = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1.4"
